<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".FilmDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_photo_film_detail"
            android:layout_width="165dp"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:src="@color/colorGreyImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_film_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/name_film"
            android:textColor="@color/colorTitleFilm"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_photo_film_detail"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_user_score"
            android:layout_width="32dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/audience"
            app:layout_constraintStart_toEndOf="@+id/img_photo_film_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_score_film_title" />

        <TextView
            android:id="@+id/tv_user_score_film_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/score_film_detail"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.097"
            app:layout_constraintStart_toEndOf="@+id/img_user_score"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_score_film_title" />

        <TextView
            android:id="@+id/tv_overview_film_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_overview_detail"
            android:textColor="@color/colorTitleFilm"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_photo_film_detail" />

        <TextView
            android:id="@+id/tv_overview_film_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/lorem_ipsum_dolor_sit_amet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_film_title" />

        <TextView
            android:id="@+id/tv_user_score_film_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/audience_score_review_title"
            android:textColor="@color/colorTextAudienceScore"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_photo_film_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_film_detail" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>